Update deps and image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: provisdom/docker-clojure:0.1.3
+image: provisdom/docker-clojure:e75a1d154dc5f5d629c7be5c24f6b34cf6a4e4cf
 
 test:
   stage: test
