Fix invalid argument format

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ image: provisdom/docker-clojure:e75a1d154dc5f5d629c7be5c24f6b34cf6a4e4cf
 before_script:
   - apt-get update
   - apt-get install libgfortran3 -y
-  - export BOOT_JVM_OPTIONS='-Xss 1M'
+  - export BOOT_JVM_OPTIONS='-Xss1m'
 
 test:
   stage: test
