Set memory size.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - checkout
-      - run: clojure -A:test
+      - run: clojure -J-Xmx3500m -A:test
 
 workflows:
   version: 2
