--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,43 @@
 version: 2.1
 
-defaults: &defaults
-  docker:
-    - image: computesoftware/java-neanderthal:c7fb0781c306c1af91545165411f0535d870cc3c-tools-deps
-
 orbs:
-  cache: compute/cache@0.0.3
+  cache: compute/cache@0.0.12
+  node: circleci/node@3.0.0
 
 jobs:
-  test:
-    <<: *defaults
+  test-clj:
+    docker:
+      - image: circleci/clojure:tools-deps-1.10.1.536
 
     steps:
       - checkout
-      - run: clojure -J-Xmx3500m -A:test
+
+      - cache/clj:
+          steps:
+            - run:
+                name: Run CLJ Tests
+                command: clojure -A:test
+
+  test-cljs:
+    docker:
+      - image: circleci/clojure:tools-deps-1.10.1.536-node-browsers
+
+    steps:
+      - checkout
+
+      - node/install-packages
+
+      - run:
+          name: Compile CLJS Karma Tests
+          command: npx shadow-cljs -v compile test-ci
+
+      - run:
+          name: Run CLJS Karma Tests
+          command: npx karma start --single-run
 
 workflows:
   version: 2
   ci-workflow:
     jobs:
-      - test
+      - test-clj
+      - test-cljs
