trying to convert intervals to cljc

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           steps:
             - run:
                 name: Run CLJ Tests
-                command: clojure -A:test
+                command: clojure -A:test-clj-runner:test
 
   test-cljs:
     docker:
